Изменение загрузки на oneget

--- a/edt/Dockerfile
+++ b/edt/Dockerfile
@@ -13,7 +13,8 @@ ARG EDT_VERSION=2020.2
 ENV installer_type=edt \
   ONEC_VERSION=${EDT_VERSION}
 
-COPY ./scripts/download.sh /download.sh
+COPY ./scripts/download_og.sh /download_og.sh
+
 
 WORKDIR /tmp
 
@@ -30,13 +31,15 @@ RUN apt-get update \
     /tmp/* \
   && localedef -i ru_RU -c -f UTF-8 -A /usr/share/locale/locale.alias ru_RU.UTF-8
 
+ARG downloads=downloads/developmenttools10/${ONEC_VERSION}
 ENV LANG ru_RU.UTF-8
 
 # Install EDT
-RUN chmod +x /download.sh \
-  && sync; /download.sh \
-  && for file in *.tar.gz; do tar -zxf "$file"; done \
-  && rm -rf *.tar.gz \
+RUN chmod +x /download_og.sh \
+  && sync; /download_og.sh \
+  && ls ${downloads} \
+  && for file in ${downloads}/*.tar.gz; do tar -zxf "$file"; done \
+  && rm -rf ${downloads}/*.tar.gz \
   && ./1ce-installer-cli install all --ignore-hardware-checks \
   && rm -rf /tmp/* \
   && mv $(dirname $(find /opt/1C/1CE -name ring)) /opt/1C/1CE/components/1c-enterprise-ring
