--- a/thin-client/Dockerfile
+++ b/thin-client/Dockerfile
@@ -4,38 +4,42 @@ ARG ONEC_USERNAME
 ARG ONEC_PASSWORD
 ARG ONEC_VERSION
 ENV installer_type=thin-client
+ENV downloads=downloads/platform83/${ONEC_VERSION}
 
-COPY ./scripts/download.sh /download.sh
+COPY ./scripts/download_og.sh /download_og.sh
+
 
 WORKDIR /tmp
 
-RUN apk --no-cache add bash curl grep \
-  && chmod +x /download.sh \
-  && sync; /download.sh \
-  && for file in *.tar.gz; do tar -zxf "$file"; done \
-  && rm -rf *.tar.gz
+RUN apk --no-cache add bash curl grep tar \
+  && chmod +x /download_og.sh \
+  && sync; /download_og.sh \
+  && rm -rf downloads/platform83/${ONEC_VERSION}/*full*.tar.gz \
+  && for file in ${downloads}/*.tar.gz; do tar -xzf "$file"; done \
+  && rm -rf ${downloads}/*.*
 
 FROM ubuntu:18.04 as base
 
+ARG ONEC_VERSION
+ENV installer_type=thin-client
 ARG nls_enabled=false
 ENV nls=$nls_enabled
 
-COPY --from=downloader /tmp/*.deb /tmp/
+COPY --from=downloader /tmp/*.* /tmp/
 
 RUN set -xe \
   && apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
       libwebkitgtk-3.0-0
 
+COPY ./scripts/install.sh /install.sh
+
 WORKDIR /tmp
 
 SHELL ["/bin/bash", "-c"]
-RUN set -xe; \
-  if [ "$nls" = true ]; then \
-    dpkg -i 1c-enterprise83-thin-client*.deb; \
-  else \
-    dpkg -i 1c-enterprise83-thin-client_*.deb; \
-  fi
+RUN ls . \
+  && chmod +x /install.sh \
+  && sync; /install.sh
 
 # create symlink to current 1c:enterprise directory
 COPY ./scripts/create-symlink-to-current-1cv8.sh /create-symlink-to-current-1cv8.sh
