--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,11 +9,16 @@ ENV downloads=downloads/platform83/${ONEC_VERSION}
 COPY ./scripts/download_og.sh /download_og.sh
 
 WORKDIR /tmp
+COPY ./distr ./${downloads}
+RUN rm ./${downloads}/.gitkeep
 
-RUN apk --no-cache add bash curl grep tar \
+RUN if [ -z "$(ls -A ${downloads})" ]; then \
+  apk --no-cache add bash curl grep tar \
   && chmod +x /download_og.sh \
-  && sync; /download_og.sh \
-  && rm -rf downloads/platform83/${ONEC_VERSION}/*thin*.tar.gz \
+  && sync; /download_og.sh; \
+  fi
+
+RUN rm -rf downloads/platform83/${ONEC_VERSION}/*thin*.tar.gz \
   && for file in ${downloads}/*.tar.gz; do tar -xzf "$file"; done \
   && find . -name "*-thin-*.deb" -delete \
   && rm -rf ${downloads}/*.*
