--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -16,9 +16,8 @@ RUN if [ -z "$(ls -A ${downloads})" ]; then \
   apk --no-cache add bash curl grep tar \
   && set -x \
   && sync; /download_og.sh; \
-  fi
-
-RUN rm -rf ${downloads}/*thin*.tar.gz \
+  fi \
+  && rm -rf ${downloads}/*thin*.tar.gz \
   && ls ${downloads} \
   && for file in ${downloads}/*.tar.gz; do tar -xzf "$file"; done \
   && rm -rf ${downloads}/*.*
@@ -85,5 +84,5 @@ COPY ./server/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 RUN ln -s usr/local/bin/docker-entrypoint.sh / # backwards compat
 ENTRYPOINT ["docker-entrypoint.sh"]
 
-EXPOSE 1540 1541 1560
+EXPOSE 1540 1541 1545 1560
 CMD ["ragent"]
