1) Добавил сборку kubernetes агента 2) Изменил базовый образ edt на поддерживаемый 3) Отредактировал ридми 4) Именил Docker_username на Docker_Registry_url для понятности

--- a/.onec.env.example
+++ b/.onec.env.example
@@ -3,7 +3,7 @@ export ONEC_PASSWORD=onec
 export ONEC_VERSION=8.3.18.1520
 export EDT_VERSION=2021.2.7
 
-export DOCKER_USERNAME=jugatsu
+export DOCKER_REGISTRY_URL=docker-registry:5000
 export DOCKER_LOGIN=login
 export DOCKER_PASSWORD=password
 
