--- a/jdk/Dockerfile
+++ b/jdk/Dockerfile
@@ -19,7 +19,7 @@ RUN apt-get update \
       locales \
       software-properties-common \
       wget \
-  && && mkdir -p /etc/apt/keyrings \
+  && mkdir -p /etc/apt/keyrings \
   && wget -O - https://packages.adoptium.net/artifactory/api/gpg/key/public | tee /etc/apt/keyrings/adoptium.asc \
   && echo "deb [signed-by=/etc/apt/keyrings/adoptium.asc] https://packages.adoptium.net/artifactory/deb $(awk -F= '/^VERSION_CODENAME/{print$2}' /etc/os-release) main" | tee /etc/apt/sources.list.d/adoptium.list \
   && apt update \
