--- a/jdk/Dockerfile
+++ b/jdk/Dockerfile
@@ -7,7 +7,7 @@ FROM ${DOCKER_REGISTRY_URL}/${BASE_IMAGE}:${BASE_TAG}
 LABEL maintainer="Nikita Gryzlov <NikGryzlov@1bit.com>, FirstBit"
 
 # Install OpenJDK
-ARG TEMURINJDK_VERSION=17
+ARG OPENJDK_VERSION=17
 
 RUN apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
@@ -23,7 +23,7 @@ RUN apt-get update \
   && wget -O - https://packages.adoptium.net/artifactory/api/gpg/key/public | tee /etc/apt/keyrings/adoptium.asc \
   && echo "deb [signed-by=/etc/apt/keyrings/adoptium.asc] https://packages.adoptium.net/artifactory/deb $(awk -F= '/^VERSION_CODENAME/{print$2}' /etc/os-release) main" | tee /etc/apt/sources.list.d/adoptium.list \
   && apt update \
-  && apt install -y temurin-${TEMURINJDK_VERSION}-jdk \
+  && apt install -y temurin-${OPENJDK_VERSION}-jdk \
   && localedef -i ru_RU -c -f UTF-8 -A /usr/share/locale/locale.alias ru_RU.UTF-8
 
 # remove DST Root CA X3 cert if it exists
