Отрефакторил скрипт. Поправил ошибки

--- a/edt/Dockerfile
+++ b/edt/Dockerfile
@@ -1,8 +1,13 @@
 # Используем базовый образ для скачивания
-ARG DOCKER_REGISTRY_URL
+ARG DOWNLOADER_REGISTRY_URL
 ARG DOWNLOADER_IMAGE
 ARG DOWNLOADER_TAG
-FROM ${DOCKER_REGISTRY_URL}/${BASE_IMAGE}:${BASE_TAG} AS downloader
+
+ARG BASE_IMAGE=eclipse-temurin
+ARG BASE_TAG=11
+ARG DOCKER_REGISTRY_URL=library
+
+FROM ${DOWNLOADER_REGISTRY_URL}/${DOWNLOADER_IMAGE}:${DOWNLOADER_TAG} as downloader
 
 # Копирование скрипта скачивания и локальных дистрибутивов
 COPY ./scripts/download_yard.sh /download.sh
@@ -33,9 +38,6 @@ ENV LC_ALL ru_RU.UTF-8
 
 RUN /download.sh "$ONEC_USERNAME" "$ONEC_PASSWORD" "$EDT_VERSION" "edt"
 
-ARG BASE_IMAGE=eclipse-temurin
-ARG BASE_TAG=11
-
 FROM ${DOCKER_REGISTRY_URL}/${BASE_IMAGE}:${BASE_TAG}
 
 LABEL maintainer="Nikita Gryzlov <NikGryzlov@1bit.com>, FirstBit"
@@ -55,12 +57,18 @@ RUN apt-get update \
     /tmp/* \
   && localedef -i ru_RU -c -f UTF-8 -A /usr/share/locale/locale.alias ru_RU.UTF-8
 
-ARG downloads=downloads/developmenttools10/${ONEC_VERSION}
+ARG EDT_VERSION=2021.3
+ARG downloads=downloads/DevelopmentTools10/${EDT_VERSION}
+
 ENV LANG ru_RU.UTF-8
 
 # Install EDT
-COPY --from=base ./distr ./${downloads}
-RUN ./1ce-installer-cli install all --ignore-hardware-checks \
+COPY --from=downloader /tmp/${downloads} /tmp/${downloads}
+
+WORKDIR /tmp/${downloads}
+
+RUN chmod +x ./1ce-installer-cli \
+  && ./1ce-installer-cli install all --ignore-hardware-checks --ignore-signature-warnings\
   && rm -rf /tmp/* \
   && mv $(dirname $(find /opt/1C/1CE -name ring)) /opt/1C/1CE/components/1c-enterprise-ring
 
