--- a/thin-client/Dockerfile
+++ b/thin-client/Dockerfile
@@ -1,47 +1,58 @@
-FROM alpine:latest as downloader
+# Используем базовый образ для скачивания
+ARG DOCKER_REGISTRY_URL
+ARG BASE_IMAGE
+ARG BASE_TAG
+FROM ${DOCKER_REGISTRY_URL}/${BASE_IMAGE}:${BASE_TAG} as downloader
 
+# Копирование скрипта скачивания и локальных дистрибутивов
+COPY ./scripts/download_yard.sh /download.sh
+COPY ./distr /distr
+RUN chmod +x /download.sh
+
+# Скачивание дистрибутива 1С с использованием вынесенного скрипта
 ARG ONEC_USERNAME
 ARG ONEC_PASSWORD
 ARG ONEC_VERSION
-ENV installer_type=thin-client
-ENV downloads=downloads/platform83/${ONEC_VERSION}
-
-COPY ./scripts/download_og.sh /download_og.sh
-
 
 WORKDIR /tmp
-COPY ./distr ./${downloads}
-RUN rm ./${downloads}/.gitkeep \
-  && rm -rf ${downloads}/server*.tar.gz \
-  && rm -rf ${downloads}/deb*.tar.gz \
-  && rm -rf ${downloads}/client*.tar.gz \
-  && rm -rf ${downloads}/1c_edt*.tar.gz \
-  && if [ -z "$(ls -A ${downloads})" ]; then \
-  apk --no-cache add bash curl grep tar \
-  && chmod +x /download_og.sh \
-  && sync; /download_og.sh; \
-  fi \
-  && rm -rf downloads/platform83/${ONEC_VERSION}/*full*.tar.gz \
-  && for file in ${downloads}/*.tar.gz; do tar -xzf "$file"; done \
-  && rm -rf ${downloads}/*.*
 
+# Установка необходимых пакетов и генерация локали
+RUN apt-get update \
+  && apt-get install -y \
+          locales \
+          p7zip-rar \
+          p7zip-full \
+  && rm -rf /var/lib/apt/lists/* \
+  && locale-gen ru_RU.UTF-8 \
+  && localedef -i ru_RU -c -f UTF-8 -A /usr/share/locale/locale.alias ru_RU.UTF-8
+
+# Установка переменных окружения для корректной работы локали
+ENV LANG ru_RU.UTF-8
+ENV LANGUAGE ru_RU:ru
+ENV LC_ALL ru_RU.UTF-8
+
+RUN /download.sh "$ONEC_USERNAME" "$ONEC_PASSWORD" "$ONEC_VERSION" "thin-client"
+
+# Начало основной стадии сборки
 FROM ubuntu:18.04 as base
 
+# Копируем скрипты и файлы установки
 ARG ONEC_VERSION
-ENV installer_type=thin-client
+ARG gosu_ver=1.11
 ARG nls_enabled=false
 ENV nls=$nls_enabled
-
-COPY --from=downloader /tmp/*.* /tmp/
+ENV distrPath=/tmp/downloads/Platform83/${ONEC_VERSION}
+ENV installer_type=thin-client
 
 RUN set -xe \
+  && chmod 777 -R /tmp \
   && apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
       libwebkitgtk-3.0-0
 
-COPY ./scripts/install.sh /install.sh
-
-WORKDIR /tmp
+COPY ./scripts/install_new.sh /install.sh
+COPY --from=downloader /tmp/ /tmp/
+WORKDIR ${distrPath}      
 
 SHELL ["/bin/bash", "-c"]
 RUN ls . \
@@ -53,6 +64,8 @@ COPY ./scripts/create-symlink-to-current-1cv8.sh /create-symlink-to-current-1cv8
 RUN chmod +x /create-symlink-to-current-1cv8.sh \
   && /create-symlink-to-current-1cv8.sh \
   && rm /create-symlink-to-current-1cv8.sh
+
+COPY ./configs/client/current/ /opt/1cv8/current/
 
 FROM ubuntu:18.04
 LABEL maintainer="Anton Kvashenkin <anton.jugatsu@gmail.com> (@jugatsu)"
