Зависимости для 24 платформы

--- a/client-vnc/Dockerfile
+++ b/client-vnc/Dockerfile
@@ -46,6 +46,7 @@ RUN apt-get update \
       at-spi2-core \
       procps \
       x11vnc \
+      iproute2\
   # Install libpng12-0 from xenial
   && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 40976EAF437D05B5 \
   && echo "deb http://security.ubuntu.com/ubuntu xenial-security main" > /etc/apt/sources.list.d/xenial-security.list \
@@ -59,6 +60,7 @@ RUN apt-get update \
   && apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     libwebkitgtk-3.0-0 \
+    libwebkit2gtk-4.0-37 \
   && rm -rf  /etc/apt/sources.list.d/stretch.list \
   && apt-get update \
   && rm -rf  \
