--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
         ONEC_USERNAME: ${{ secrets.ONEC_USERNAME}}
         ONEC_PASSWORD: ${{ secrets.ONEC_PASSWORD}}
         ONEC_VERSION: '8.3.24.1624'
+        EDT_VERSION: '2021.2.7'
       run: |
         docker run -d -p 5000:5000 --name registry registry:2
         ./${{ matrix.script }}
