Убрана сборка crs, бамп версии едт

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        script: [ 'build-base-k8s-jenkins-agent.sh', 'build-base-k8s-jenkins-agent.sh', 'build-crs.sh', 'build-edt-k8s-agent.sh', 'build-edt-swarm-agent.sh', 'build-oscript-k8s-agent.sh', 'build-oscript-swarm-agent.sh', 'build-server.sh' ]
+        script: [ 'build-base-k8s-jenkins-agent.sh', 'build-base-k8s-jenkins-agent.sh', 'build-edt-k8s-agent.sh', 'build-edt-swarm-agent.sh', 'build-oscript-k8s-agent.sh', 'build-oscript-swarm-agent.sh', 'build-server.sh' ]
 
     steps:
     - name: Checkout repository
@@ -33,7 +33,7 @@ jobs:
         ONEC_USERNAME: ${{ secrets.ONEC_USERNAME}}
         ONEC_PASSWORD: ${{ secrets.ONEC_PASSWORD}}
         ONEC_VERSION: '8.3.24.1624'
-        EDT_VERSION: '2021.2.7'
+        EDT_VERSION: '2023.3.6'
       run: |
         docker run -d -p 5000:5000 --name registry registry:2
         ./${{ matrix.script }}
