--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        script: [ 'build-base-k8s-jenkins-agent.sh', 'build-base-swarm-jenkins-agent.sh', 'build-edt-k8s-agent.sh', 'build-edt-swarm-agent.sh', 'build-oscript-k8s-agent.sh', 'build-oscript-swarm-agent.sh', 'build-server.sh' ]
+        script: [ 'build-base-k8s-jenkins-agent.sh', 'build-base-swarm-jenkins-agent.sh', 'build-edt-swarm-agent.sh', 'build-oscript-k8s-agent.sh', 'build-oscript-swarm-agent.sh', 'build-server.sh' ]
 
     steps:
     - name: Checkout repository
