--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,14 @@
 name: Build Docker Images
 
 on:
-  push:
-    branches: [ feature/first-bit]
-  pull_request:
-    branches: [ feature/first-bit]
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["Pre-build checks"]
+    types:
+      - completed
 
 jobs:
   build:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -18,6 +18,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        # Получаем рефы для pull-реквеста
+        ref: ${{ github.event.workflow_run.head_branch }}
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
