--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,8 @@ jobs:
       run: |
         docker run -d -p 5000:5000 --name registry registry:2
         ./${{ matrix.script }}
+    - name: Set Job Status
+      uses: s4u/set-job-status-action@v1
+      with:
+        status: success # или 'failure'
+        github_token: ${{ secrets.GITHUB_TOKEN }}
