--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        depth: 0
+        fetch-depth: 0
         ref: ${{ github.event.workflow_run.head_branch }}
 
     - name: Create Check Run (Started)
