Для сборки oscript поднята версия ovm а так же выхлоп перекодирован в UTF-8

--- a/oscript/Dockerfile
+++ b/oscript/Dockerfile
@@ -7,6 +7,9 @@ FROM ${DOCKER_REGISTRY_URL}/${BASE_IMAGE}:${BASE_TAG}
 # Installing mono and oscript dependencies
 ARG MONO_VERSION=6.12.0.122
 
+ENV LANG="C.UTF-8" \
+    LC_ALL="C.UTF-8"
+
 RUN apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
       ca-certificates \
@@ -37,7 +40,7 @@ RUN chmod +x /remove-dst-root-ca-x3.sh \
 
 # Installing oscript
 ARG OVM_REPOSITORY_OWNER=oscript-library
-ARG OVM_VERSION=v1.0.0-RC16
+ARG OVM_VERSION=v1.2.3
 ARG ONESCRIPT_VERSION=stable
 ARG ONESCRIPT_PACKAGES="add gitsync vanessa-runner stebi edt-ripper"
 
