--- a/edt/Dockerfile
+++ b/edt/Dockerfile
@@ -7,7 +7,7 @@ ARG BASE_IMAGE=eclipse-temurin
 ARG BASE_TAG=11
 ARG DOCKER_REGISTRY_URL=library
 
-FROM ${DOWNLOADER_REGISTRY_URL}/${DOWNLOADER_IMAGE}:${DOWNLOADER_TAG} as downloader
+FROM ${DOWNLOADER_REGISTRY_URL}/${DOWNLOADER_IMAGE}:${DOWNLOADER_TAG} AS downloader
 
 # Копирование скрипта скачивания и локальных дистрибутивов
 COPY ./scripts/download_yard.sh /download.sh
@@ -17,12 +17,17 @@ RUN chmod +x /download.sh
 # Скачивание дистрибутива 1С с использованием вынесенного скрипта
 ARG ONEC_USERNAME
 ARG ONEC_PASSWORD
-ARG EDT_VERSION=2021.3
+ARG EDT_VERSION
 
 WORKDIR /tmp
 
+RUN apt update \
+  && apt install software-properties-common -y \
+  && apt update
+
 # Установка необходимых пакетов и генерация локали
-RUN apt-get update \
+RUN add-apt-repository universe \
+  && apt-get update \
   && apt-get install -y \
           locales \
           p7zip-rar \
@@ -32,15 +37,13 @@ RUN apt-get update \
   && localedef -i ru_RU -c -f UTF-8 -A /usr/share/locale/locale.alias ru_RU.UTF-8
 
 # Установка переменных окружения для корректной работы локали
-ENV LANG ru_RU.UTF-8
-ENV LANGUAGE ru_RU:ru
-ENV LC_ALL ru_RU.UTF-8
+ENV LANG=ru_RU.UTF-8
+ENV LANGUAGE=ru_RU:ru
+ENV LC_ALL=ru_RU.UTF-8
 
 RUN /download.sh "$ONEC_USERNAME" "$ONEC_PASSWORD" "$EDT_VERSION" "edt"
 
-FROM ${DOCKER_REGISTRY_URL}/${BASE_IMAGE}:${BASE_TAG}
-
-LABEL maintainer="Nikita Gryzlov <NikGryzlov@1bit.com>, FirstBit"
+FROM ${DOCKER_REGISTRY_URL}/${BASE_IMAGE}:${BASE_TAG} AS builder
 
 WORKDIR /tmp
 
@@ -57,10 +60,10 @@ RUN apt-get update \
     /tmp/* \
   && localedef -i ru_RU -c -f UTF-8 -A /usr/share/locale/locale.alias ru_RU.UTF-8
 
-ARG EDT_VERSION=2021.3
+ARG EDT_VERSION  
 ARG downloads=downloads/DevelopmentTools10/${EDT_VERSION}
 
-ENV LANG ru_RU.UTF-8
+ENV LANG=ru_RU.UTF-8
 
 # Install EDT
 COPY --from=downloader /tmp/${downloads} /tmp/${downloads}
@@ -71,5 +74,12 @@ RUN chmod +x ./1ce-installer-cli \
   && ./1ce-installer-cli install all --ignore-hardware-checks --ignore-signature-warnings\
   && rm -rf /tmp/* \
   && mv $(dirname $(find /opt/1C/1CE -name ring)) /opt/1C/1CE/components/1c-enterprise-ring
+
+ENV PATH="/opt/1C/1CE/components/1c-enterprise-ring:$PATH"
+
+FROM ${DOCKER_REGISTRY_URL}/${BASE_IMAGE}:${BASE_TAG} AS final
+
+COPY --from=builder /etc/1C /etc/1C
+COPY --from=builder /opt/1C /opt/1C
 
 ENV PATH="/opt/1C/1CE/components/1c-enterprise-ring:$PATH"
